[gd_scene load_steps=8 format=3 uid="uid://c16uhcush6cp1"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_ebpph"]
[ext_resource type="Texture2D" uid="uid://jxfbng7wapfp" path="res://grey_sliderRight.png" id="1_v6q86"]
[ext_resource type="PackedScene" uid="uid://b8iq0h0nmv40r" path="res://Scenes/energy_bar.tscn" id="3_fm1y6"]
[ext_resource type="PackedScene" uid="uid://btvu06t5i741p" path="res://Scenes/bubble.tscn" id="3_nonk7"]
[ext_resource type="PackedScene" uid="uid://bi5vix6ylto5a" path="res://Scenes/shock.tscn" id="5_tj765"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldrdn"]
bg_color = Color(0.152941, 0.658824, 0.152941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mru71"]
bg_color = Color(0.137255, 0.470588, 0.760784, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ebpph")
env = 50
trust = 50

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.298039, 0.368627, 0.470588, 1)

[node name="GreySliderRight" type="NinePatchRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1009.0
offset_top = 4.0
offset_right = 1146.0
offset_bottom = 38.0
texture = ExtResource("1_v6q86")
region_rect = Rect2(-0.0526352, 0.0447845, 39.5526, 28.9552)
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 15
patch_margin_bottom = 6
metadata/_edit_group_ = true

[node name="Label" type="Button" parent="ColorRect/GreySliderRight"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 127.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Next Turn"
flat = true

[node name="EnergyBar" parent="ColorRect" instance=ExtResource("3_fm1y6")]
layout_mode = 0
offset_left = 184.0
offset_top = 9.0
offset_right = 246.0
offset_bottom = 35.0

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = 429.0
offset_top = 8.0
offset_right = 542.0
offset_bottom = 34.0
size_flags_horizontal = 0
text = "Environment : "

[node name="Env" type="ProgressBar" parent="ColorRect/Label2"]
layout_mode = 0
offset_left = 120.0
offset_top = -1.0
offset_right = 258.0
offset_bottom = 26.0
tooltip_text = "Reach the goal by 2050 to attain net zero"
theme_override_styles/fill = SubResource("StyleBoxFlat_ldrdn")
value = 50.0
show_percentage = false

[node name="Line2D2" type="Line2D" parent="ColorRect/Label2/Env"]
position = Vector2(-210, -615)
points = PackedVector2Array(332, 646, 332, 614)
width = 1.0

[node name="Label3" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = 736.0
offset_top = 8.0
offset_right = 829.0
offset_bottom = 34.0
size_flags_horizontal = 0
text = "Support :"

[node name="Trust" type="ProgressBar" parent="ColorRect/Label3"]
layout_mode = 0
offset_left = 82.0
offset_top = -1.0
offset_right = 220.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_mru71")
value = 50.0
show_percentage = false

[node name="Line2D3" type="Line2D" parent="ColorRect/Label3/Trust"]
position = Vector2(-263, -615)
points = PackedVector2Array(332, 646, 332, 614)
width = 1.0

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.062
offset_bottom = -40.176
grow_horizontal = 2
color = Color(0.298039, 0.368627, 0.470588, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_bottom = 97.0
grow_horizontal = 0
color = Color(0.1224, 0.2214, 0.36, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/ColorRect"]
layout_mode = 0
offset_top = 4.0
offset_right = 98.0
offset_bottom = 90.0

[node name="Label" type="Label" parent="ColorRect2/ColorRect/VBoxContainer"]
layout_mode = 2
text = "  Money:"
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect2/ColorRect/VBoxContainer"]
layout_mode = 2
text = "  Budget:"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2/ColorRect/VBoxContainer"]
layout_mode = 2
text = "  Production: "
vertical_alignment = 1

[node name="money" type="Label" parent="ColorRect2/ColorRect"]
layout_mode = 0
offset_left = 101.0
offset_right = 192.0
offset_bottom = 44.0
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="prod" type="Label" parent="ColorRect2/ColorRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 57.0
offset_right = 191.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="budget" type="Label" parent="ColorRect2/ColorRect"]
layout_mode = 0
offset_left = 49.0
offset_top = 29.0
offset_right = 191.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="ColorRect2"]
layout_mode = 0
offset_left = 88.0
offset_top = 13.0
offset_right = 830.0
offset_bottom = 29.0
editable = false
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="Label" type="Label" parent="ColorRect2/HSlider"]
layout_mode = 0
offset_left = -44.0
offset_top = -3.0
offset_right = -4.0
offset_bottom = 23.0
text = "2020"

[node name="Label2" type="Label" parent="ColorRect2/HSlider"]
layout_mode = 0
offset_left = 759.0
offset_top = -4.0
offset_right = 799.0
offset_bottom = 22.0
text = "2050"

[node name="Bubble" parent="." instance=ExtResource("3_nonk7")]
visible = false

[node name="Shock" parent="." instance=ExtResource("5_tj765")]
visible = false

[connection signal="pressed" from="ColorRect/GreySliderRight/Label" to="." method="_on_label_pressed"]
